# frankensim

./: .gitignore  AGENTS.md  CHANGELOG.md  CHANGELOG_RESEARCH.md  COMPREHENSIVE_ADDENDUM_TO_FRANKENSIM_PLAN.md  COMPREHENSIVE_PLAN_FOR_FRANKENSIM.md  COMPREHENSIVE_PLAN_TO_EXTEND_FRANKENSIM_TO_NEW_DOMAINS.md  Cargo.toml  README.md  capability-maturity.json  constellation-trust-assessment.json  doc-facts-inventory.json  frankensim-source-manifest.json  frankensim-source-manifest.spdx.json  golden-couplings.json  identity-authorities.json  identity-schemas.json  moonshot-portfolio.json  proposed-manifest-fixture.json  unsafe-capsules.json  vertical-capability-graph.json  vv-scorecard.json  vv-scorecard.md
crates/fs-ad/: CONTRACT.md  Cargo.toml
crates/fs-ad/src/: bridge.rs  dual.rs  gradcheck.rs  ift.rs  lib.rs  revolve.rs
crates/fs-ad/tests/: conformance.rs  la_dual_bridge_casebook.rs
crates/fs-adaptbo-e2e/: CONTRACT.md  Cargo.toml
crates/fs-adaptbo-e2e/src/: lib.rs
crates/fs-adaptbo-e2e/tests/: adaptbo.rs
crates/fs-adjoint/: CONTRACT.md  Cargo.toml
crates/fs-adjoint/src/: certs.rs  dwr_accept.rs  explain.rs  hadamard.rs  hessian.rs  ift.rs  lib.rs  mitigate.rs  sobolev.rs  timedep.rs  transpose.rs  verify.rs
crates/fs-adjoint/tests/: adjoint_battery.rs  certs.rs  dwr_accept.rs  explain.rs  mitigate.rs  transpose.rs
crates/fs-asbuilt/: CONTRACT.md  Cargo.toml
crates/fs-asbuilt/src/: datum.rs  lib.rs  propagate.rs  rigid3.rs
crates/fs-asbuilt/tests/: asbuilt.rs  datum.rs  propagate.rs  rigid3.rs
crates/fs-ascent/: CONTRACT.md  Cargo.toml
crates/fs-ascent/src/: auglag.rs  interior.rs  lbfgs.rs  lib.rs  pareto.rs  riemann.rs  runner.rs  sqp.rs  stop.rs  trust.rs  wolfe.rs
crates/fs-ascent/tests/: ascent_battery.rs  constrained_battery.rs  constrained_study_replay.rs  dtlz_moo_battery.rs  eproc_race_validity.rs  frankenscipy_optimizer_oracle_casebook.rs  fsci_bo_cutest_oracle.rs  fsci_oracle.rs  pareto_battery.rs  pareto_study_replay.rs  riemannian_study_replay.rs  runner_battery.rs  runner_cancel_battery.rs  runner_manifold_authority.rs  trust_region_study_replay.rs  wfg_moo_battery.rs  zdt_moo_battery.rs
crates/fs-bem/: CONTRACT.md  Cargo.toml
crates/fs-bem/src/: lib.rs  panel2d.rs  panel3d.rs  wake2d.rs
crates/fs-bem/tests/: battery.rs
crates/fs-benchmark/: CONTRACT.md  Cargo.toml
crates/fs-benchmark/src/: lib.rs
crates/fs-benchmark/tests/: benchmark.rs
crates/fs-bisect/: CONTRACT.md  Cargo.toml
crates/fs-bisect/src/: compound.rs  lib.rs
crates/fs-bisect/tests/: compound_battery.rs
crates/fs-blake3/: CONTRACT.md  Cargo.toml
crates/fs-blake3/src/: identity.rs  lib.rs
crates/fs-blake3/tests/: authority_promotion.rs  identity.rs
crates/fs-bo/: CONTRACT.md  Cargo.toml
crates/fs-bo/src/: acq.rs  acq_grad.rs  bo.rs  gp.rs  lib.rs  mf.rs  sparse.rs  turbo.rs
crates/fs-bo/tests/: acq_grad_battery.rs  bo_battery.rs  bo_study_replay.rs  hetero_battery.rs  hetero_gp_study_replay.rs  mf_battery.rs  probe_grad.rs  sparse_battery.rs  sparse_gp_study_replay.rs  turbo_battery.rs  turbo_study_replay.rs
crates/fs-casebook/: CONTRACT.md  Cargo.toml
crates/fs-casebook/src/: lib.rs
crates/fs-casebook/tests/: casebook.rs
crates/fs-cheb/: CONTRACT.md  Cargo.toml
crates/fs-cheb/src/: budget.rs  cheb2.rs  colleague.rs  lib.rs  orr_sommerfeld.rs
crates/fs-cheb/tests/: budget_battery.rs  cheb_battery.rs  conformance.rs  frankenscipy_integrate_oracle_casebook.rs  os_battery.rs  variants.rs
crates/fs-checker/: CONTRACT.md  Cargo.toml
crates/fs-checker/src/: lib.rs  plugins.rs  semantic.rs
crates/fs-checker/tests/: checker.rs  epi_e2e.rs  plugins.rs
crates/fs-conduction/: CONTRACT.md  Cargo.toml  MODEL_CARD.md
crates/fs-conduction/src/: adjoint.rs  assemble.rs  bc.rs  field.rs  fixtures.rs  interface.rs  lib.rs  material.rs  mesh.rs  solve.rs
crates/fs-conduction/tests/: adjoint.rs  analytic.rs  conformance.rs  contact.rs  mms.rs  radiation.rs
crates/fs-constraint/: CONTRACT.md  Cargo.toml
crates/fs-constraint/src/: diagnose.rs  ival.rs  lib.rs
crates/fs-constraint/tests/: conformance.rs
crates/fs-convection/: CONTRACT.md  Cargo.toml
crates/fs-convection/src/: lib.rs
crates/fs-convection/tests/: correlations.rs  robin_seam.rs
crates/fs-couple/: CONTRACT.md  Cargo.toml
crates/fs-couple/src/: lib.rs
crates/fs-couple/tests/: couple.rs
crates/fs-cutfem/: CONTRACT.md  Cargo.toml
crates/fs-cutfem/src/: agg.rs  cond.rs  elastic.rs  fem.rs  grid.rs  lib.rs  quad.rs  sdf.rs
crates/fs-cutfem/tests/: battery.rs  elasticity.rs  elasticity_adjoint.rs
crates/fs-detaudit/: CONTRACT.md  Cargo.toml
crates/fs-detaudit/src/: lib.rs
crates/fs-detaudit/tests/: detaudit.rs  real_subjects.rs
crates/fs-diffreal-e2e/: CONTRACT.md  Cargo.toml
crates/fs-diffreal-e2e/src/: lib.rs
crates/fs-diffreal-e2e/tests/: as_built_chain.rs  e2e.rs
crates/fs-epi-e2e/: CONTRACT.md  Cargo.toml
crates/fs-epi-e2e/src/: lib.rs
crates/fs-epi-e2e/tests/: e2e.rs
crates/fs-eproc/: CONTRACT.md  Cargo.toml
crates/fs-eproc/src/: hardening.rs  lib.rs
crates/fs-eproc/tests/: adversarial_rotation.rs  betting_eprocess_study_replay.rs  conformal_shift_receipt.rs  hardening.rs
crates/fs-evidence/: CONTRACT.md  Cargo.toml
crates/fs-evidence/src/: action.rs  admitted.rs  cards.rs  claim_class.rs  color.rs  discrepancy.rs  falsify.rs  identity.rs  lib.rs  (+2 more)
crates/fs-exec/: CONTRACT.md  Cargo.toml
crates/fs-fab/: CONTRACT.md  Cargo.toml
crates/fs-flagship-e2e/: CONTRACT.md  Cargo.toml
crates/fs-flutter-e2e/: CONTRACT.md  Cargo.toml
crates/fs-flux/: CONTRACT.md  Cargo.toml
crates/fs-ga/: CONTRACT.md  Cargo.toml
xtask/: Cargo.toml
xtask/src/: bootstrap_provenance.rs  claims.rs  closures.rs  constellation_admission.rs  constellation_assessment.rs  constellation_cleanliness.rs  depgraph.rs  identities.rs  main.rs  manifest_fixture.rs  matdb_pack.rs  maturity.rs  moonshot_policy.rs  source_manifest.rs  vv_scorecard.rs
xtask/tests/: constellation_admission.rs  interface_pack_cli.rs  interface_pack_seed_cli.rs  matdb_pack_cli.rs
(+1335 files in other folders)
