[package]
name = "xtask"
version = "0.0.1"
edition = "2024"
publish = false
description = "FrankenSim repository policy checks: layer discipline, dependency policy, contract presence."

[package.metadata.frankensim]
layer = "TOOL"

[dependencies]
fs-blake3 = { path = "../crates/fs-blake3" }
fs-evidence = { path = "../crates/fs-evidence" }
fs-matdb = { path = "../crates/fs-matdb" }
fs-qty = { path = "../crates/fs-qty" }

[lints]
workspace = true
