[package]
name = "xtask"
version = "0.0.1"
edition = "2024"
publish = false
description = "FrankenSim repository policy checks: layer discipline, dependency policy, contract presence."

[package.metadata.frankensim]
layer = "TOOL"

[dependencies]
fs-blake3 = { path = "../crates/fs-blake3" }
fs-evidence = { path = "../crates/fs-evidence" }
fs-govern = { path = "../crates/fs-govern" }
fs-matdb = { path = "../crates/fs-matdb" }
fs-obs = { path = "../crates/fs-obs" }
fs-qty = { path = "../crates/fs-qty" }
fs-vvreg = { path = "../crates/fs-vvreg" }

[lints]
workspace = true
