[package]
name = "fs-bisect"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Physics-VCS bisect (addendum Proposal 10): git-bisect for a wrong number — binary search over a commit sequence with a monotone predicate, two-tier low/full fidelity confirmation, and non-monotonicity detection."

[package.metadata.frankensim]
layer = "L6"

[dependencies]
fs-blake3 = { path = "../fs-blake3" }

[dev-dependencies]
# Test-only independent JSON/duplicate-key oracle for emitted manifests. These
# crates are absent from the production dependency graph.
serde = "1"
serde_json = "1"

[lints]
workspace = true
