[package]
name = "fs-bo"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Bayesian optimization: Matern-family Gaussian processes with QMC-multistart hyperparameter fitting, EI/q-EI acquisitions, and deterministic BO loops."

[package.metadata.frankensim]
layer = "L4"

[dependencies]
fs-ascent = { path = "../fs-ascent" }
fs-dfo = { path = "../fs-dfo" }
fs-la = { path = "../fs-la" }
fs-math = { path = "../fs-math" }
fs-rand = { path = "../fs-rand" }

fs-ad = { path = "../fs-ad", optional = true }

[features]
tape-acq = ["dep:fs-ad", "fs-ad/torch-bridge"]

[dev-dependencies]
fs-eproc = { path = "../fs-eproc" }
fs-uq = { path = "../fs-uq" }

[lints]
workspace = true

# Feature-gated integration target (huq.18): skipped-with-reason when the
# feature is off, never a zero-test pass.
[[test]]
name = "acq_grad_battery"
required-features = ["tape-acq"]

# Feature-gated integration target (huq.18): skipped-with-reason when the
# feature is off, never a zero-test pass.
[[test]]
name = "probe_grad"
required-features = ["tape-acq"]
