[package]
name = "fs-couple"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Multiphysics composition through port-Hamiltonian Dirac structures (fs-couple): partitioned coupling that is PASSIVE BY CONSTRUCTION. Power-conjugate ports, a Dirac interconnection that conserves interface power exactly, an energy audit that measures (never assumes) passivity, and Aitken interface acceleration that stabilizes added-mass-instability-prone FSI where naive staggering diverges."

[package.metadata.frankensim]
layer = "L3"

[dependencies]

[dev-dependencies]

[lints]
workspace = true
