[package]
name = "fs-couple"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Multiphysics composition through typed port-thermodynamic relations (fs-couple): lossless Dirac interconnections, explicit storage/dissipation/source boundaries, measured energy audits, and Aitken interface acceleration without false whole-system passivity claims."

[package.metadata.frankensim]
layer = "L3"

[dependencies]
fs-iface = { path = "../fs-iface" }
fs-qty = { path = "../fs-qty" }

[dev-dependencies]

[lints]
workspace = true
