[package]
name = "fs-diffreal-e2e"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Differentiation & reality end-to-end suite: shared tape/VJP fixture sensitivities, independent dual/FD falsifiers, the as-built loop, and sampled-only tolerance checks with typed logs."

[package.metadata.frankensim]
layer = "L6"

[dependencies]
fs-ad = { path = "../fs-ad" }
fs-adjoint = { path = "../fs-adjoint", features = ["ledger-transpose"] }
fs-evidence = { path = "../fs-evidence" }
fs-asbuilt = { path = "../fs-asbuilt" }
fs-assimilate = { path = "../fs-assimilate" }
fs-blake3 = { path = "../fs-blake3" }
fs-exec = { path = "../fs-exec" }
fs-toleralloc = { path = "../fs-toleralloc" }

[dev-dependencies]
fs-alloc = { path = "../fs-alloc" }

[lints]
workspace = true
