[package]
name = "fs-epi-e2e"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Epistemic type-system end-to-end suite (addendum): a runnable Layer-2 battery that exercises laundering refusal, the no-falsifier-no-ship gate + budget allocator, the Goodhart guard, objective epistemics, and the evidence-package round-trip together — the artifact of record that the type system FAILS SAFE, with structured per-stage logging."

[package.metadata.frankensim]
layer = "L6"

[dependencies]
fs-evidence = { path = "../fs-evidence" }
fs-opt = { path = "../fs-opt" }
fs-robust = { path = "../fs-robust" }
fs-package = { path = "../fs-package" }
fs-checker = { path = "../fs-checker" }

[dev-dependencies]

[lints]
workspace = true
