[package]
name = "fs-eproc"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Anytime-valid inference: betting e-processes, mixture confidence sequences, e-BH."

[package.metadata.frankensim]
layer = "L4"

[dependencies]
fs-math = { path = "../fs-math" }

[dev-dependencies]
fs-obs = { path = "../fs-obs" }
fs-rand = { path = "../fs-rand" }

[features]
# [F]-gated per the Ambition-Tag rule (bead 7tv.9).
conformal-hardening = []

[lints]
workspace = true

# Feature-gated integration target (huq.18): skipped-with-reason when the
# feature is off, never a zero-test pass.
[[test]]
name = "hardening"
required-features = ["conformal-hardening"]
