[package]
name = "fs-ga"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Geometric algebra: PGA Cl(3,0,1) motors/screws/meets + CGA Cl(4,1) spheres/tangency via const-evaluated multiplication tables, with Vec3/quaternion facades."

[package.metadata.frankensim]
layer = "L2"

[dependencies]
fs-math = { path = "../fs-math" }

[dev-dependencies]
fs-propcheck = { path = "../fs-propcheck" }

[lints]
workspace = true
